force-app/main/default/objects/CSAT_Survey__c/CSAT_Survey__c.object-meta.xml
<CustomObject>
    <description>Stores CSAT phone survey responses captured by Case Managers after patient calls. SCRUM-24.</description>
    <label>CSAT Survey</label>
    <nameField>
        <displayFormat>CSAT-{0000}</displayFormat>
        <label>Survey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSAT Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>