force-app/main/default/objects/CSAT_Survey__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Account (patient) this survey is associated with.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CSAT Surveys</relationshipLabel>
    <relationshipName>CSAT_Surveys</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>