force-app/main/default/objects/CSAT_Survey__c/fields/Agent_Helpfulness__c.field-meta.xml
<CustomField>
    <fullName>Agent_Helpfulness__c</fullName>
    <description>Rating of how helpful the agent was during the call.</description>
    <label>Agent Helpfulness</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Excellent</fullName><default>false</default><label>Excellent</label></value>
            <value><fullName>Good</fullName><default>false</default><label>Good</label></value>
            <value><fullName>Average</fullName><default>false</default><label>Average</label></value>
            <value><fullName>Poor</fullName><default>false</default><label>Poor</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>