force-app/main/default/objects/CSAT_Survey__c/fields/Call_Reason__c.field-meta.xml
<CustomField>
    <fullName>Call_Reason__c</fullName>
    <description>The reason for the patient call.</description>
    <label>Call Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Enrollment</fullName><default>false</default><label>Enrollment</label></value>
            <value><fullName>Benefits</fullName><default>false</default><label>Benefits</label></value>
            <value><fullName>Refill</fullName><default>false</default><label>Refill</label></value>
            <value><fullName>Billing</fullName><default>false</default><label>Billing</label></value>
            <value><fullName>General Inquiry</fullName><default>false</default><label>General Inquiry</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>