force-app/main/default/objects/CSAT_Survey__c/fields/Issue_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Issue_Resolution__c</fullName>
    <description>Whether the patient issue was resolved during the call.</description>
    <label>Issue Resolution</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Fully Resolved</fullName><default>false</default><label>Fully Resolved</label></value>
            <value><fullName>Partially Resolved</fullName><default>false</default><label>Partially Resolved</label></value>
            <value><fullName>Not Resolved</fullName><default>false</default><label>Not Resolved</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>