force-app/main/default/objects/CSAT_Survey__c/fields/NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>NPS_Score__c</fullName>
    <description>Net Promoter Score (0-10). How likely the patient is to recommend our services.</description>
    <label>NPS Score</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>