force-app/main/default/objects/CSAT_Survey__c/fields/Overall_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaction__c</fullName>
    <description>Patient overall satisfaction rating.</description>
    <label>Overall Satisfaction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Very Satisfied</fullName><default>false</default><label>Very Satisfied</label></value>
            <value><fullName>Satisfied</fullName><default>false</default><label>Satisfied</label></value>
            <value><fullName>Neutral</fullName><default>false</default><label>Neutral</label></value>
            <value><fullName>Dissatisfied</fullName><default>false</default><label>Dissatisfied</label></value>
            <value><fullName>Very Dissatisfied</fullName><default>false</default><label>Very Dissatisfied</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>