force-app/main/default/objects/CSAT_Survey__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Follow-up priority set by the agent after a patient call. Urgent = immediate outreach needed. SCRUM-32.</description>
    <label>Follow-Up Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Urgent</fullName><default>false</default><label>Urgent</label></value>
            <value><fullName>Normal</fullName><default>true</default><label>Normal</label></value>
            <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>