force-app/main/default/objects/CSAT_Survey__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the survey response.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Completed</fullName><default>true</default><label>Completed</label></value>
            <value><fullName>Partial</fullName><default>false</default><label>Partial</label></value>
            <value><fullName>Void</fullName><default>false</default><label>Void</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>