force-app/main/default/objects/CSAT_Survey__c/fields/Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Date__c</fullName>
    <description>Date the survey was conducted.</description>
    <defaultValue>TODAY()</defaultValue>
    <label>Survey Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>