force-app/main/default/objects/CSAT_Survey__c/fields/Surveyed_By__c.field-meta.xml
<CustomField>
    <fullName>Surveyed_By__c</fullName>
    <description>The user who conducted the survey.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surveyed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CSAT_Surveys_Conducted</relationshipName>
    <type>Lookup</type>
</CustomField>